# spec-desktop

./: CLAUDE.md  DEPLOY.md  DISTRIBUTION.md  GEMINI.md  QUICKSTART.md  README.md  USER_SYSTEM_README.md  abstract-spec.md  dev-app-update.yml  electron-builder.yml  fix-macos-quarantine.sh  package-lock.json  package.json
.github/workflows/: release.yml
backend/: .env.example  .gitignore  README.md  build.py  main.py  pyproject.toml  requirements.txt  test_ai.py  test_cache.py
backend/app/: database.py  main.py
backend/app/models/: schemas.py  user.py
backend/app/routers/: admin.py  auth.py  cache.py  generate.py  upload.py
backend/app/services/: ai_service.py  auth_service.py  cache_service.py  document_service.py  docx_writer.py  excel_parser.py
backend/data/: users.db
backend/scripts/: create_admin.py  init_admin.py
backend/tests/: test_ai_service.py
frontend/apps/web-antd/: vite.config.mts
frontend/apps/web-antd/src/router/routes/modules/: admin.ts  spec.ts
frontend/apps/web-antd/src/views/admin/: users.vue
frontend/apps/web-antd/src/views/spec/generator/: index.vue
frontend/apps/web-naive/src/api/spec/: index.ts
frontend/apps/web-naive/src/router/routes/modules/: spec.ts
frontend/apps/web-naive/src/views/spec-generator/: index.vue
reference/service/: SmarttoolService.py  aiclient.py  content.py  feature.py  myconfig.py  resolver.py  tool.py
src/main/: index.ts  ipc-handlers.ts  logger.ts  mermaid.ts
src/preload/: index.d.ts  index.ts
src/renderer/src/: App.css  App.tsx
